--- a/src/pages/add-wallet/add-wallet.html
+++ b/src/pages/add-wallet/add-wallet.html
@@ -7,7 +7,7 @@
         </ion-icon>
         <div class="item-title" translate>Create New</div>
       </button>
-      <button *ngIf="!addingNewWallet" class="list-button" ion-item (click)="goToImportWallet()">
+      <button class="list-button" ion-item (click)="goToImportWallet()">
         <ion-icon item-start>
           <img src="assets/img/add-wallet/import.svg" />
         </ion-icon>
