--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,7 +18,7 @@
 </ion-header>
 
 <ion-content class="fullscreen-tab" [ngClass]="{blur: isBlur}" #scrollArea>
-  <ion-refresher (ionRefresh)="doRefresh($event)" *ngIf="!showReorder" pullMin="90" pullMax="180">
+  <ion-refresher (ionRefresh)="doRefresh($event)" pullMin="90" *ngIf="!reorderingWallets" pullMax="180">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
@@ -102,12 +102,12 @@
       </ion-card-content>
     </ion-card>
 
-    <div *ngFor="let walletGroup of walletsGroups | keys; let i = index" class="wallets-container">
+    <div *ngFor="let walletGroup of walletsGroups; let i = index" class="wallets-container">
       <div class="section-header">
         <span>
-          <span class="ellipsis">{{walletGroup.key}}</span>
+          <span class="ellipsis">{{walletGroup && walletGroup[0].groupName}}</span>
         </span>
-        <div class="wallet-options" *ngIf="walletGroup.value && walletGroup.value.length">
+        <div class="wallet-options" *ngIf="walletGroup && walletGroup.length">
           <span *ngIf="!showReorder || !showReorder[i]" (click)="reorder(i)" class="reorder-button" tappable>
             <ion-icon name="ios-create-outline"></ion-icon>
           </span>
@@ -117,42 +117,42 @@
         </div>
       </div>
 
-      <div *ngIf="showReorder && showReorder[i] && shouldShowAddWallet(walletGroup)" class="add-card-button" (click)="goToAddView(walletGroup.value[0].credentials.keyId)" translate>Add Wallet</div>
+      <div *ngIf="(showReorder && showReorder[i]) && shouldShowAddWallet(walletGroup)" class="add-card-button" (click)="goToAddView(walletGroup[0].credentials.keyId)" translate>Add Wallet</div>
 
-      <label-tip class="no-arrowhead" type="warn" *ngIf="(!showReorder || !showReorder[i]) && walletGroup.value && walletGroup.value[0].needsBackup" margin-top>
+      <label-tip class="no-arrowhead" type="warn" *ngIf="(!showReorder || !showReorder[i]) && walletGroup && walletGroup[0].needsBackup" margin-top>
         <span label-tip-title translate>Profile Needs Backup</span>
         <div label-tip-body>
           <span translate>Before retrieving your wallets addresses, it's recommended that you first write down your recovery phrase and store it securely so that your wallet can be recovered in the case your device was lost or stolen.</span>
         </div>
       </label-tip>
 
-      <ion-list class="sliding-container wallets" reorder="{{showReorderWallets}}" (ionItemReorder)="reorderWallets($event)" *ngIf="showReorder && showReorder[i]">
-        <ion-item-sliding *ngFor="let wallet of walletGroup.value | keys" #slidingItem>
-          <button ion-item detail-none (click)="onWalletAction(wallet.value, 'view', slidingItem)">
-            <wallet-item-content [wallet]="wallet.value"></wallet-item-content>
+      <ion-list class="sliding-container wallets" reorder="{{showReorderWallets}}" (ionItemReorder)="reorderWallets($event, i)" *ngIf="showReorder && showReorder[i]">
+        <ion-item-sliding *ngFor="let wallet of walletGroup" #slidingItem>
+          <button ion-item detail-none (click)="onWalletAction(wallet, 'view', slidingItem)">
+            <wallet-item-content [wallet]="wallet"></wallet-item-content>
           </button>
         </ion-item-sliding>
       </ion-list>
-      <ion-list class="sliding-container wallets" reorder="{{hideReorderWallets}}" (ionItemReorder)="reorderWallets($event)" *ngIf="!showReorder || !showReorder[i]">
-        <div *ngFor="let wallet of walletGroup.value | keys">
+      <ion-list class="sliding-container wallets" reorder="{{hideReorderWallets}}" (ionItemReorder)="reorderWallets($event, i)" *ngIf="!showReorder || !showReorder[i]">
+        <div *ngFor="let wallet of walletGroup">
           <ion-item-sliding #slidingItem>
-            <button ion-item detail-none (click)="onWalletAction(wallet.value, 'view', slidingItem)">
-              <wallet-item-content [wallet]="wallet.value"></wallet-item-content>
+            <button ion-item detail-none (click)="onWalletAction(wallet, 'view', slidingItem)">
+              <wallet-item-content [wallet]="wallet"></wallet-item-content>
             </button>
             <ion-item-options side="left">
-              <button class="action action--send" ion-button (click)="onWalletAction(wallet.value, 'send', slidingItem)">
+              <button class="action action--send" ion-button (click)="onWalletAction(wallet, 'send', slidingItem)">
                 <div class="action__icon"><img src="assets/img/send.svg" /></div>
                 <div class="action__text">Send</div>
               </button>
             </ion-item-options>
             <ion-item-options side="right">
-              <button class="action action--receive" ion-button (click)="onWalletAction(wallet.value, 'receive', slidingItem)">
+              <button class="action action--receive" ion-button (click)="onWalletAction(wallet, 'receive', slidingItem)">
                 <div class="action__icon"><img src="assets/img/receive.svg" /></div>
                 <div class="action__text">Receive</div>
               </button>
             </ion-item-options>
           </ion-item-sliding>
-          <label-tip type="info" *ngIf="!wallet.value.isComplete()">
+          <label-tip type="info" *ngIf="!wallet.isComplete()">
             <span label-tip-title translate>Wallet Incomplete</span>
             <div label-tip-body>
               <span translate>This wallet is waiting for authorized users/devices to join.</span>
