Group of wallets instead of Profile in the whole app

--- a/src/pages/add-wallet/add-wallet.html
+++ b/src/pages/add-wallet/add-wallet.html
@@ -1,4 +1,4 @@
-<wide-header-page title="{{'Add Profile' | translate}}">
+<wide-header-page title="{{'Add Group of Wallets' | translate}}">
   <div page-content>
     <ion-list class="settings-list">
       <button class="list-button" ion-item (click)="goToAddPage()">
