--- a/src/pages/add/add.html
+++ b/src/pages/add/add.html
@@ -2,7 +2,7 @@
   <div page-content>
     <label-tip class="info" type="info" header="no-header">
       <div label-tip-body translate>
-        Add a new wallet to this Profile. All wallets from a Profile share the same recovery phrase.
+        Add a new wallet to this Group of Wallets. All wallets from a Group share the same recovery phrase.
       </div>
     </label-tip>
     <ion-list class="settings-list">
