--- a/src/pages/add/create-wallet/create-wallet.html
+++ b/src/pages/add/create-wallet/create-wallet.html
@@ -11,8 +11,8 @@
 <ion-content no-bounce>
   <form [formGroup]="createForm">
     <ion-item *ngIf="!keyId">
-      <ion-label floating>{{'Profile name' | translate}}</ion-label>
-      <ion-input type=" text" formControlName="profileName"></ion-input>
+      <ion-label floating>{{'Group of Wallets name' | translate}}</ion-label>
+      <ion-input type=" text" formControlName="walletGroupName"></ion-input>
     </ion-item>
 
     <ion-item>
