--- a/src/pages/add/import-wallet/import-wallet.html
+++ b/src/pages/add/import-wallet/import-wallet.html
@@ -23,8 +23,8 @@
 
   <form [formGroup]="importForm">
     <ion-item>
-      <ion-label floating>{{'Profile name' | translate}}</ion-label>
-      <ion-input type="text" formControlName="profileName"></ion-input>
+      <ion-label floating>{{'Group of Wallets name' | translate}}</ion-label>
+      <ion-input type="text" formControlName="walletGroupName"></ion-input>
     </ion-item>
 
     <ion-item *ngIf="selectedTab == 'words'">
