--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -121,18 +121,20 @@
       </button>
 
       <ion-item-divider *ngIf="walletsGroups && walletsGroups[0]">
-        {{'Profiles' | translate}}
+        {{'Groups of Wallets' | translate}}
         <button ion-button clear item-right class="settings-list__divider-button" (click)="goToAddWalletPage()">
           <img src="assets/img/plus.svg" width="14" />
         </button>
       </ion-item-divider>
 
-      <button ion-item *ngFor="let walletsGroup of walletsGroups" (click)="openWalletGroupSettings(walletsGroup)">
+      <button ion-item *ngFor="let walletsGroup of walletsGroups; let i = index" (click)="openWalletGroupSettings(walletsGroup)">
         <ion-icon class="item-img" item-start>
           <img src="assets/img/add-wallet/wallet.svg" class="icon-settings" />
         </ion-icon>
         <ion-label>
-          {{walletsGroup.name}}
+          <span *ngIf="walletsGroups.length === 1 && !walletsGroup.name">Wallets</span>
+          <span *ngIf="walletsGroups.length > 1 && !walletsGroup.name">Wallets #{{i + 1}}</span>
+          <span *ngIf="walletsGroup.name">{{walletsGroup.name}}</span>
         </ion-label>
       </button>
 
