--- a/src/pages/wallet-details/wallet-details.html
+++ b/src/pages/wallet-details/wallet-details.html
@@ -5,7 +5,6 @@
         <ion-icon ios="md-close" md="md-close"></ion-icon>
       </button>
     </ion-buttons>
-    <ion-title left>{{wallet.name}}</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -17,45 +16,49 @@
     <expandable-header class="balance-card" [scrollArea]="scrollArea">
       <expandable-header-primary class="balance-header">
 
-        <div *ngIf="wallet.network == 'testnet'" class="top-notification warning">
+        <div *ngIf="wallet?.network == 'testnet'" class="top-notification warning">
           <a class="energized" (click)="openExternalLink('https://support.bitpay.com/hc/en-us/articles/360004102011-What-is-testnet-How-do-I-avoid-testnet-Bitcoin-scams-')">
             {{'Learn more about testnet blockchain' | translate}}
             <ion-icon name="arrow-forward"></ion-icon>
           </a>
         </div>
 
-        <div *ngIf="lowUtxosWarning && wallet.network == 'livenet'" class="top-notification warning">
+        <div *ngIf="lowUtxosWarning && wallet?.network == 'livenet'" class="top-notification warning">
           <a class="energized" (click)="openAddresses()">
             {{'Spending this balance will need significant Bitcoin network fees'|translate}}
             <ion-icon name="arrow-forward"></ion-icon>
           </a>
         </div>
 
+        <div class="wallet-name">
+          {{wallet?.name}}
+        </div>
+
         <div (longPress)="toggleBalance()">
-          <div (tap)="updateAll(true)" *ngIf="!wallet.balanceHidden && !wallet.scanning && !walletNotRegistered && (wallet.cachedStatus || wallet.lastKnownBalance)">
-            <div *ngIf="wallet.coin !== 'xrp'; else xrpBalance">
+          <div (tap)="updateAll(true)" *ngIf="!wallet?.balanceHidden && !wallet?.scanning && !walletNotRegistered && (wallet?.cachedStatus || wallet?.lastKnownBalance)">
+            <div *ngIf="wallet?.coin !== 'xrp'; else xrpBalance">
               <div class="balance-str">
-                {{ wallet.cachedStatus ? wallet.cachedStatus.totalBalanceStr  : wallet.lastKnownBalance }} </div>
-              <div class="balance-alt-str" *ngIf="wallet.cachedStatus && wallet.cachedStatus.totalBalanceAlternative">
-                {{wallet.cachedStatus.totalBalanceAlternative}} {{wallet.cachedStatus.alternativeIsoCode}}
+                {{ wallet?.cachedStatus ? wallet?.cachedStatus.totalBalanceStr  : wallet?.lastKnownBalance }} </div>
+              <div class="balance-alt-str" *ngIf="wallet?.cachedStatus && wallet?.cachedStatus.totalBalanceAlternative">
+                {{wallet?.cachedStatus.totalBalanceAlternative}} {{wallet?.cachedStatus.alternativeIsoCode}}
               </div>
             </div>
             <ng-template #xrpBalance>
               <div (click)="openBalanceDetails()">
                 <div class="balance-str">
-                  {{ wallet.cachedStatus ? wallet.cachedStatus.availableBalanceStr  : wallet.lastKnownBalance }} </div>
-                <div class="balance-alt-str" *ngIf="wallet.cachedStatus && wallet.cachedStatus.totalBalanceAlternative">
-                  {{wallet.cachedStatus.availableBalanceAlternative}} {{wallet.cachedStatus.alternativeIsoCode}}
+                  {{ wallet?.cachedStatus ? wallet?.cachedStatus.availableBalanceStr  : wallet?.lastKnownBalance }} </div>
+                <div class="balance-alt-str" *ngIf="wallet?.cachedStatus && wallet?.cachedStatus.totalBalanceAlternative">
+                  {{wallet?.cachedStatus.availableBalanceAlternative}} {{wallet?.cachedStatus.alternativeIsoCode}}
                 </div>
               </div>
             </ng-template>
-            <div class="balance-alt-str" *ngIf="!wallet.scanning && !wallet.cachedStatus && wallet.lastKnownBalanceUpdatedOn">
-              {{ wallet.lastKnownBalanceUpdatedOn * 1000 | amTimeAgo }}
+            <div class="balance-alt-str" *ngIf="!wallet?.scanning && !wallet?.cachedStatus && wallet?.lastKnownBalanceUpdatedOn">
+              {{ wallet?.lastKnownBalanceUpdatedOn * 1000 | amTimeAgo }}
             </div>
 
           </div>
 
-          <div class="balance-hidden" *ngIf="!updateStatusError && wallet.balanceHidden  && !wallet.scanning">
+          <div class="balance-hidden" *ngIf="!updateStatusError && wallet?.balanceHidden  && !wallet?.scanning">
             <span class="title" translate>[Balance Hidden]</span>
             <div translate>
               Tap and hold to show
@@ -63,28 +66,28 @@
           </div>
         </div>
 
-        <div class="balance-scanning" *ngIf="!updateStatusError && wallet.scanning">
+        <div class="balance-scanning" *ngIf="!updateStatusError && wallet?.scanning">
           <span class="title" translate>[Scanning Funds]</span>
           <div translate>
             Please wait...
           </div>
         </div>
 
-        <div class="balance-spendable" (click)="openBalanceDetails()" *ngIf="!wallet.balanceHidden && !wallet.scanning && !updateStatusError && showBalanceButton">
+        <div class="balance-spendable" (click)="openBalanceDetails()" *ngIf="!wallet?.balanceHidden && !wallet?.scanning && !updateStatusError && showBalanceButton">
           <ion-icon ios="ios-timer-outline" md="md-timer"></ion-icon>
           <strong>
-            {{wallet.cachedStatus.spendableBalanceStr}}
+            {{wallet?.cachedStatus.spendableBalanceStr}}
           </strong>
           &nbsp;
           <span>
-            ({{wallet.cachedStatus.spendableBalanceAlternative}} {{wallet.cachedStatus.alternativeIsoCode}})
+            ({{wallet?.cachedStatus.spendableBalanceAlternative}} {{wallet?.cachedStatus.alternativeIsoCode}})
           </span>
           &rarr;
         </div>
 
         <div class="balance-error" *ngIf="updateStatusError">
           <div>
-            <span>{{wallet.error}}</span>
+            <span>{{wallet?.error}}</span>
           </div>
         </div>
 
@@ -94,29 +97,38 @@
             This wallet is not registered at the given Bitcore Wallet Service (BWS). You can recreate it from the local information.
           </div>
         </div>
+
+        <div class="action-buttons">
+          <button class="button-standard" (click)="goToReceivePage()" ion-button>
+            Receive
+          </button>
+          <button class="button-standard" (click)="goToSendPage()" ion-button>
+            Send
+          </button>
+        </div>
       </expandable-header-primary>
       <expandable-header-footer class="wallet-info" *ngIf="wallet" style="display: flex; align-items: center">
 
         <div class="left-buttons">
-          <img class="testnet" *ngIf="wallet.network == 'testnet'" src="assets/img/icon-wallet-testnet.svg">
-          <img class="testnet-text" *ngIf="wallet.network == 'testnet'" src="assets/img/icon-text-testnet.svg">
-          <img class="read-only" *ngIf="!wallet.canSign" src="assets/img/settings-icons/icon-read-only.svg">
-          <img class="read-only-text" *ngIf="!wallet.canSign" src="assets/img/icon-text-read-only.svg">
-          <img class="auditable-text" *ngIf="wallet.cachedStatus && wallet.cachedStatus.wallet && wallet.cachedStatus.wallet.singleAddress && isUtxoCoin()" src="assets/img/icon-text-auditable.svg">
-          <img class="custom-bws" *ngIf="wallet.usingCustomBWS" src="assets/img/icon-bws-white.svg">
-          <img class="encrypted" *ngIf="wallet.isPrivKeyEncrypted" src="assets/img/icon-lock-white.svg">
-          <span class="token" *ngIf="wallet.linkedEthWalletName">
-            <span>{{'Linked to wallet: {linkedEthWalletName}' | translate : {linkedEthWalletName: wallet.linkedEthWalletName} }}</span>
+          <img class="testnet" *ngIf="wallet?.network == 'testnet'" src="assets/img/icon-wallet-testnet.svg">
+          <img class="testnet-text" *ngIf="wallet?.network == 'testnet'" src="assets/img/icon-text-testnet.svg">
+          <img class="read-only" *ngIf="!wallet?.canSign" src="assets/img/settings-icons/icon-read-only.svg">
+          <img class="read-only-text" *ngIf="!wallet?.canSign" src="assets/img/icon-text-read-only.svg">
+          <img class="auditable-text" *ngIf="wallet?.cachedStatus && wallet?.cachedStatus.wallet && wallet?.cachedStatus.wallet?.singleAddress && isUtxoCoin()" src="assets/img/icon-text-auditable.svg">
+          <img class="custom-bws" *ngIf="wallet?.usingCustomBWS" src="assets/img/icon-bws-white.svg">
+          <img class="encrypted" *ngIf="wallet?.isPrivKeyEncrypted" src="assets/img/icon-lock-white.svg">
+          <span class="token" *ngIf="wallet?.linkedEthWalletName">
+            <span>{{'Linked to wallet: {linkedEthWalletName}' | translate : {linkedEthWalletName: wallet?.linkedEthWalletName} }}</span>
           </span>
-          <span class="token" *ngIf="wallet.coin === 'xrp' && wallet.cachedStatus && wallet.cachedStatus.lockedBalanceSat">
+          <span class="token" *ngIf="wallet?.coin === 'xrp' && wallet?.cachedStatus && wallet?.cachedStatus.lockedBalanceSat">
             <span translate>Activated</span>
           </span>
-          <span class="wallet-type" *ngIf="wallet.credentials.n > 1">
-            <span>{{wallet.m}}-{{wallet.n}}</span>
+          <span class="wallet-type" *ngIf="wallet?.credentials.n > 1">
+            <span>{{wallet?.m}}-{{wallet?.n}}</span>
           </span>
         </div>
 
-        <button ion-button clear class="search-button" *ngIf="wallet && wallet.completeHistory && wallet.completeHistory.length > 4 && !shouldShowSpinner()" (click)="openSearchModal()">
+        <button ion-button clear class="search-button" *ngIf="wallet && wallet?.completeHistory && wallet?.completeHistory.length > 4 && !shouldShowSpinner()" (click)="openSearchModal()">
           <img src="assets/img/search.svg">
         </button>
         <ion-spinner name="crescent" *ngIf="shouldShowSpinner()"></ion-spinner>
@@ -128,10 +140,10 @@
     <div class="fix-margin">
       <div class="history-wrapper">
 
-        <ion-list *ngIf="wallet && wallet.isComplete() && !walletNotRegistered && txps && txps[0]" class="tx-history">
-          <ion-item-divider *ngIf="wallet.incorrectDerivation">
+        <ion-list *ngIf="wallet && wallet?.isComplete() && !walletNotRegistered && txps && txps[0]" class="tx-history">
+          <ion-item-divider *ngIf="wallet?.incorrectDerivation">
             <span translate>
-              WARNING: Key derivation is not working on this device/wallet. Actions cannot be performed on this wallet.
+              WARNING: Key derivation is not working on this device/wallet?. Actions cannot be performed on this wallet?.
             </span>
           </ion-item-divider>
           <ion-item-divider class="tx-history-header tx-history-header--large">
@@ -144,12 +156,12 @@
           <div *ngFor="let txp of txpsPending;  let i=index">
             <page-txp *ngIf="i<=2" [tx]="txp" [addressbook]="addressbook"></page-txp>
           </div>
-          <ion-item *ngIf="wallet.cachedStatus && wallet.cachedStatus.lockedBalanceSat" class="locked-balance" (click)="openBalanceDetails()">
+          <ion-item *ngIf="wallet?.cachedStatus && wallet?.cachedStatus.lockedBalanceSat" class="locked-balance" (click)="openBalanceDetails()">
             <span translate>Total Locked Balance</span>
             <ion-note item-end>
-              <span class="total-locked-amount">{{wallet.cachedStatus.lockedBalanceStr}}</span>
-              <div class="total-alt-locked-amount">{{wallet.cachedStatus.lockedBalanceAlternative}}
-                {{wallet.cachedStatus.alternativeIsoCode}}</div>
+              <span class="total-locked-amount">{{wallet?.cachedStatus.lockedBalanceStr}}</span>
+              <div class="total-alt-locked-amount">{{wallet?.cachedStatus.lockedBalanceAlternative}}
+                {{wallet?.cachedStatus.alternativeIsoCode}}</div>
             </ion-note>
           </ion-item>
         </ion-list>
@@ -162,13 +174,13 @@
             <img src="assets/img/ghost-tongue-out.svg" />
           </div>
           <div class="title-info">
-            <span translate *ngIf="wallet.coin === 'xrp' && wallet.cachedStatus && !wallet.cachedStatus.lockedBalanceSat; else ghostTown">20 XRP required to activate</span>
+            <span translate *ngIf="wallet?.coin === 'xrp' && wallet?.cachedStatus && !wallet?.cachedStatus.lockedBalanceSat; else ghostTown">20 XRP required to activate</span>
             <ng-template #ghostTown>
               <span translate>It's a ghost town in here</span>
             </ng-template>
           </div>
           <div class="subtitle-info">
-            <span translate *ngIf="wallet.coin === 'xrp' && wallet.cachedStatus && !wallet.cachedStatus.lockedBalanceSat; else noFunds">
+            <span translate *ngIf="wallet?.coin === 'xrp' && wallet?.cachedStatus && !wallet?.cachedStatus.lockedBalanceSat; else noFunds">
               The XRP ledger requires that all wallets maintain a minimum balance of 20 XRP. This non-refundable 20 XRP will remain permanently locked in your wallet.
             </span>
             <ng-template #noFunds>
@@ -228,7 +240,7 @@
                   </div>
                 </ion-icon>
 
-                <div class="action" *ngIf="tx.confirmations <= 0 && !(tx.amount === 0 && wallet.coin === 'eth')">
+                <div class="action" *ngIf="tx.confirmations <= 0 && !(tx.amount === 0 && wallet?.coin === 'eth')">
                   <span *ngIf="(tx.action == 'sent') && !(addressbook && tx.outputs[0] && addressbook[tx.outputs[0].address])">{{'Sending'
                     | translate}}</span>
                   <span *ngIf="(tx.action == 'moved') && !(addressbook && tx.outputs[0] && addressbook[tx.outputs[0].address])">{{'Moving'
@@ -247,7 +259,7 @@
                   </span>
                 </div>
 
-                <div class="action" *ngIf="tx.confirmations > 0 && tx.action == 'sent' && !(tx.amount === 0 && wallet.coin === 'eth')">
+                <div class="action" *ngIf="tx.confirmations > 0 && tx.action == 'sent' && !(tx.amount === 0 && wallet?.coin === 'eth')">
                   <span *ngIf="(tx.message && (tx.note && !tx.note.body)) && (!addressbook || !tx.outputs[0] || !addressbook[tx.outputs[0].address]) && (!tx.customData || !tx.customData.toWalletName)" translate>Sent</span>
                   <span *ngIf="!tx.message && (!tx.note || (tx.note && !tx.note.body)) && (!addressbook || !tx.outputs[0] || !addressbook[tx.outputs[0].address]) && (!tx.customData || !tx.customData.toWalletName)">{{'Sent'
                     | translate}}</span>
@@ -261,7 +273,7 @@
                   </span>
                 </div>
 
-                <div class="action" *ngIf="tx.amount === 0 && wallet.coin === 'eth'">
+                <div class="action" *ngIf="tx.amount === 0 && wallet?.coin === 'eth'">
                   <span>{{'Fee for token transfer' | translate}}</span>
                 </div>
 
@@ -278,9 +290,9 @@
 
                 <ion-note item-end text-end>
                   <div class="amount">
-                    <span [ngClass]="{'received': tx.action == 'received'}" *ngIf="tx.action != 'invalid' && !(tx.amount === 0 && wallet.coin === 'eth')">{{tx.amount |
-                      satToUnit: wallet.coin}}</span>
-                    <span *ngIf="tx.amount === 0 && wallet.coin === 'eth'">{{tx.fees | satToUnit: wallet.coin}}</span>
+                    <span [ngClass]="{'received': tx.action == 'received'}" *ngIf="tx.action != 'invalid' && !(tx.amount === 0 && wallet?.coin === 'eth')">{{tx.amount |
+                      satToUnit: wallet?.coin}}</span>
+                    <span *ngIf="tx.amount === 0 && wallet?.coin === 'eth'">{{tx.fees | satToUnit: wallet?.coin}}</span>
                     <span class="double-spend" *ngIf="tx.action == 'invalid'" translate>(possible double spend)</span>
                   </div>
                   <div class="date">
