Dark mode option. Home tab. First approach
Ref: dark mode

alt currency page

Smooth transitions - navigation bar

Settings Tab Dark Mode 01

iOS dark mode

Fix iOS statusBar for different themes

Fix some pages - Fix scroll-bg-color - Fix typo

Settings Tab Dark Mode 02

dark theme color

Theme refactor. Dark mode for modals

backup game

icon fixes

themeProvider implemented

Notifications. Options sheet. Txp and more

New design tour and action card component

Cards Tab

Gift cards

Fix theme apply

Remove plugin

Wallet details

Fix theme transition

Fix box styles

Avatar. Wallet receive & send. Multi-send

confirm page

Lock pages. Popups

Dark clipboard card

Dark info-sheet, cards header, xrp icon, ongoing process

Ref: dark - style fixes

dark scss variables

Fix close modals and back arrow buttons

Fix opacity in dark mode

[REF] light wallet details

Fix wallet details issues

ion-list. feedback card. info-sheet.

Fix dark mode: ion-alert, action-sheet, logs, timeline

specific amount request

Multiple fixes for dark mode

BitPay Card confirm. Terms

Rebase master. Create new wallet card. BitPay card

Fix: searchbar for search-tx-modal and alt-currency

gift card details page

shapeshift details page

sweep paper wallet

share bitpay/copay

ion-alert inputs background

secondary-button

Fix/Comment unit tests for dark mode

fix lint

[FIX] Status bar android and ios

rebase master

Fix: icon services border, transition time

fix lint

text color wallet-details. BitPay card details icons

toolbar buttons

rebase master

BehaviorSubject removed

icons improvements

summary text color

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -80,6 +80,16 @@
         <ion-toggle [(ngModel)]="showTotalBalance" (ionChange)="toggleShowBalanceFlag()"></ion-toggle>
       </ion-item>
 
+      <ion-item class="align-with-button">
+        <ion-icon class="item-img icon-settings" name="ios-moon" item-start></ion-icon>
+        <ion-label>
+          <div class="main-label">
+            {{'Dark Mode' | translate}}
+          </div>
+        </ion-label>
+        <ion-toggle [(ngModel)]="isDarkTheme" (ionChange)="toggleAppTheme()"></ion-toggle>
+      </ion-item>
+
       <ion-item-divider *ngIf="walletsGroups && walletsGroups[0]">
         {{ 'Crypto Wallets & Keys' | translate }}
         <button class="reorder-option" ion-button item-end clear *ngIf="!showReorder && walletsGroups?.length > 1" (click)="reorder()">
@@ -107,6 +117,18 @@
           </div>
         </ion-label>
       </button>
+
+      <ion-item class="align-with-button">
+        <ion-icon class="item-img icon-settings" style="opacity: 0.3;" item-start>
+          <img class="icon-qrcode" src="assets/img/settings-icons/icon-qrcode.svg">
+        </ion-icon>
+        <ion-label>
+          <div class="main-label">
+            {{'Use Legacy QR Code' | translate}}
+          </div>
+        </ion-label>
+        <ion-toggle [(ngModel)]="useLegacyQrCode" (ionChange)="toggleQrCodeLegacyFlag()"></ion-toggle>
+      </ion-item>
 
       <ion-list reorder="{{showReorder}}" (ionItemReorder)="reorderAccounts($event)">
         <button ion-item [attr.detail-none]="showReorder ? true : null" *ngFor="let walletsGroup of walletsGroups; let i = index" (click)="openWalletGroupSettings(walletsGroup[0].keyId)">
@@ -143,6 +165,17 @@
           {{'{walletsGroupLength} Wallets' | translate:{walletsGroupLength: readOnlyWalletsGroup.length} }}
         </ion-note>
       </button>
+      <ion-item class="align-with-button">
+        <ion-icon class="item-img icon-settings" style="opacity: 0.3;" item-start>
+          <img class="icon-qrcode" src="assets/img/settings-icons/icon-qrcode.svg">
+        </ion-icon>
+        <ion-label>
+          <div class="main-label">
+            {{'Use Legacy QR Code' | translate}}
+          </div>
+        </ion-label>
+        <ion-toggle [(ngModel)]="useLegacyQrCode" (ionChange)="toggleQrCodeLegacyFlag()"></ion-toggle>
+      </ion-item>
 
       <button ion-item detail-none class="create-button" *ngIf="walletsGroups && walletsGroups[0]" (click)="goToAddView()">
         {{ 'Create or Import a Key' | translate }}
