--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -87,7 +87,7 @@
             {{'Dark Mode' | translate}}
           </div>
         </ion-label>
-        <ion-toggle [(ngModel)]="appTheme" (ionChange)="toggleAppTheme()"></ion-toggle>
+        <ion-toggle [(ngModel)]="isDarkTheme" (ionChange)="toggleAppTheme()"></ion-toggle>
       </ion-item>
 
       <ion-item-divider *ngIf="walletsGroups && walletsGroups[0]">
@@ -124,8 +124,7 @@
         <ion-toggle [(ngModel)]="useLegacyQrCode" (ionChange)="toggleQrCodeLegacyFlag()"></ion-toggle>
       </ion-item>
 
-      <button ion-item *ngFor="let walletsGroup of walletsGroups; let i = index"
-        (click)="openWalletGroupSettings(walletsGroup[0].keyId)">
+      <button ion-item *ngFor="let walletsGroup of walletsGroups; let i = index" (click)="openWalletGroupSettings(walletsGroup[0].keyId)">
         <ion-icon *ngIf="walletsGroup[0].canSign" class="item-img icon-settings" item-start>
           <img src="assets/img/settings-icons/icon-key.svg" />
         </ion-icon>
@@ -147,8 +146,7 @@
           {{'{walletsGroupLength} Wallets' | translate:{walletsGroupLength: walletsGroup.length} }}
         </ion-note>
       </button>
-      <button ion-item detail-none class="create-button" *ngIf="walletsGroups && walletsGroups[0]"
-        (click)="goToAddView()">
+      <button ion-item detail-none class="create-button" *ngIf="walletsGroups && walletsGroups[0]" (click)="goToAddView()">
         {{ 'Create or Import a Key' | translate }}
       </button>
 
@@ -170,8 +168,7 @@
         </ion-list>
       </div>
 
-      <button ion-item *ngFor="let card of (cardServices | orderBy: ['title'])"
-        (click)="openSettingIntegration(card.name)">
+      <button ion-item *ngFor="let card of (cardServices | orderBy: ['title'])" (click)="openSettingIntegration(card.name)">
         <ion-icon class="item-img" item-start>
           <img src="{{card.icon}}" />
         </ion-icon>
@@ -201,8 +198,7 @@
         {{ 'Exchanges' | translate }}
       </ion-item-divider>
 
-      <button ion-item *ngFor="let integration of (integrationServices | orderBy: ['title'])"
-        (click)="openSettingIntegration(integration.name)">
+      <button ion-item *ngFor="let integration of (integrationServices | orderBy: ['title'])" (click)="openSettingIntegration(integration.name)">
         <ion-icon class="item-img" item-start>
           <img src="{{integration.icon}}" />
         </ion-icon>
