Theme refactor. Dark mode for modals

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -87,7 +87,7 @@
             {{'Dark Mode' | translate}}
           </div>
         </ion-label>
-        <ion-toggle [(ngModel)]="appTheme" (ionChange)="toggleAppTheme()"></ion-toggle>
+        <ion-toggle [(ngModel)]="isDarkTheme" (ionChange)="toggleAppTheme()"></ion-toggle>
       </ion-item>
 
       <ion-item-divider *ngIf="walletsGroups && walletsGroups[0]">
@@ -111,6 +111,18 @@
           </div>
         </ion-label>
       </button>
+
+      <ion-item class="align-with-button">
+        <ion-icon class="item-img icon-settings" style="opacity: 0.3;" item-start>
+          <img src="assets/img/settings-icons/icon-qrcode.svg">
+        </ion-icon>
+        <ion-label>
+          <div class="main-label">
+            {{'Use Legacy QR Code' | translate}}
+          </div>
+        </ion-label>
+        <ion-toggle [(ngModel)]="useLegacyQrCode" (ionChange)="toggleQrCodeLegacyFlag()"></ion-toggle>
+      </ion-item>
 
       <button ion-item *ngFor="let walletsGroup of walletsGroups; let i = index" (click)="openWalletGroupSettings(walletsGroup[0].keyId)">
         <ion-icon *ngIf="walletsGroup[0].canSign" class="item-img icon-settings" item-start>
