--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -145,7 +145,7 @@
 
       <ion-item class="align-with-button">
         <ion-icon class="item-img icon-settings" style="opacity: 0.3;" item-start>
-          <img src="assets/img/settings-icons/icon-qrcode.svg">
+          <img class="icon-qrcode" src="assets/img/settings-icons/icon-qrcode.svg">
         </ion-icon>
         <ion-label>
           <div class="main-label">
