ion-list. feedback card. info-sheet.

--- a/src/pages/integrations/coinbase/buy-coinbase/buy-coinbase.html
+++ b/src/pages/integrations/coinbase/buy-coinbase/buy-coinbase.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content [ngClass]="{'add-padding-bottom': isCordova}" no-bounce>
-  <ion-list *ngIf="buyRequestInfo">
+  <ion-list class="bp-list" *ngIf="buyRequestInfo">
     <ion-item>
       <div class="buying-label">
         <img class="buying-img" src="assets/img/buy-bitcoin.svg">
