--- a/src/pages/integrations/coinbase/coinbase-tx-details/coinbase-tx-details.html
+++ b/src/pages/integrations/coinbase/coinbase-tx-details/coinbase-tx-details.html
@@ -43,7 +43,7 @@
       </div>
     </ion-card-content>
   </ion-card>
-  <ion-list>
+  <ion-list class="bp-list">
 
     <ion-item *ngFor="let err of tx.error.errors">
       <ion-label>
