--- a/src/pages/integrations/coinbase/coinbase.html
+++ b/src/pages/integrations/coinbase/coinbase.html
@@ -37,7 +37,7 @@
       </div>
     </div>
     <div *ngIf="accessToken">
-      <ion-list>
+      <ion-list class="bp-list">
         <button padding ion-item (click)="goToBuyCoinbasePage()">
           <ion-icon item-start>
             <img src="assets/img/buy-bitcoin.svg" alt="buy bitcoin" width="30">
