--- a/src/pages/integrations/coinbase/sell-coinbase/sell-coinbase.html
+++ b/src/pages/integrations/coinbase/sell-coinbase/sell-coinbase.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content [ngClass]="{'add-padding-bottom': isCordova}" no-bounce>
-  <ion-list *ngIf="sellRequestInfo">
+  <ion-list class="bp-list" *ngIf="sellRequestInfo">
     <ion-item>
       <div class="selling-label">
         <img class="selling-img" src="assets/img/sell-bitcoin.svg">
