--- a/src/pages/integrations/shapeshift/shapeshift-details/shapeshift-details.html
+++ b/src/pages/integrations/shapeshift/shapeshift-details/shapeshift-details.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <ion-list>
+  <ion-list class="bp-list">
     <ion-item-divider></ion-item-divider>
     <ion-item>
       {{'Status' | translate}}
