--- a/src/pages/wallet-details/search-tx-modal/search-tx-modal.html
+++ b/src/pages/wallet-details/search-tx-modal/search-tx-modal.html
@@ -10,8 +10,8 @@
 </ion-header>
 
 <ion-content>
-  <div>
-    <ion-searchbar placeholder="{{'Search Transactions' | translate}}" [(ngModel)]="search" (ngModelChange)="updateSearchInput(search)"></ion-searchbar>
+  <div padding>
+    <ion-input class="search-wrapper" placeholder="{{'Search Transactions' | translate}}" [(ngModel)]="search" (ngModelChange)="updateSearchInput(search)"></ion-input>
   </div>
 
   <ion-list *ngIf="txHistorySearchResults && txHistorySearchResults[0]" class="bp-list tx-history">
