--- a/src/pages/integrations/bitpay-card/bitpay-card-phases/phase-one/phase-one-intro-page/phase-one-intro-page.html
+++ b/src/pages/integrations/bitpay-card/bitpay-card-phases/phase-one/phase-one-intro-page/phase-one-intro-page.html
@@ -100,7 +100,7 @@
           <button ion-button class="button-standard" (click)="joinList()">
             {{'Join the Waitlist' | translate}}
           </button>
-          <button ion-button class="button-standard phaseOne__footer__secondary-button" color="light" (click)="orderBitPayCard()">
+          <button ion-button class="button-standard button-secondary" (click)="orderBitPayCard()">
             {{'I still want to order the current card' | translate}}
           </button>
           <button ion-button clear class="button-standard" (click)="connectBitPayCard()">
