--- a/src/pages/integrations/bitpay-card/bitpay-card-phases/phase-one/phase-one-intro-page/phase-one-intro-page.html
+++ b/src/pages/integrations/bitpay-card/bitpay-card-phases/phase-one/phase-one-intro-page/phase-one-intro-page.html
@@ -100,7 +100,7 @@
           <button ion-button class="button-standard" (click)="joinList()">
             {{'Continue' | translate}}
           </button>
-          <button ion-button clear color="dark" class="button-standard" (click)="connectBitPayCard()">
+          <button ion-button clear class="button-standard" (click)="connectBitPayCard()">
             {{'Pair My BitPay Card' | translate}}
           </button>
         </div>
