smoother animation and bg fixed in wallet-details

--- a/src/pages/wallet-details/wallet-details.html
+++ b/src/pages/wallet-details/wallet-details.html
@@ -21,7 +21,7 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <div class="wrapper">
-    <expandable-header class="balance-card" [noGradient]="true" [scrollArea]="scrollArea" #expandableHeader>
+    <expandable-header class="balance-card" [scrollArea]="scrollArea" #expandableHeader>
       <expandable-header-primary class="balance-header">
 
         <div *ngIf="wallet?.network == 'testnet'" class="top-notification warning">
