--- a/src/pages/wallet-details/wallet-details.html
+++ b/src/pages/wallet-details/wallet-details.html
@@ -16,7 +16,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content #scrollArea [fixed-scroll-bg-color]="backgroundColor">
+<ion-content no-bounce #scrollArea [fixed-scroll-bg-color]="backgroundColor">
   <ion-refresher (ionRefresh)="doRefresh($event)" [ngStyle]="{'background': backgroundColor}">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
