--- a/src/pages/buy-crypto/crypto-offers/crypto-offers.html
+++ b/src/pages/buy-crypto/crypto-offers/crypto-offers.html
@@ -48,14 +48,17 @@
       </action-card-v4>
 
       <action-card-v4 (click)="goToWyreBuyPage()" tappable *ngIf="wShowOffer">
-        <div action-card-body *ngIf="!wFiatMoney" class="loader">
+        <div action-card-body *ngIf="!wFiatMoney && !wErrorMsg" class="loader">
           <ion-spinner></ion-spinner>
         </div>
-        <div action-card-body translate *ngIf="wFiatMoney">
-
-          <div class="main-label">{{wAmountReceiving}} {{coin | uppercase}}</div>
-
-          <div class="secondary-label">1 {{coin | uppercase}} = <span *ngIf="fiatCurrency?.toUpperCase() === 'USD'">$</span>{{wFiatMoney | number:'1.2-2'}} <span *ngIf="fiatCurrency?.toUpperCase() !== 'USD'">{{fiatCurrency}}</span> *</div>
+        <div action-card-body translate *ngIf="wFiatMoney || wErrorMsg">
+          <div *ngIf="wErrorMsg">
+            <div class="main-label">{{wErrorMsg}}</div>
+          </div>
+          <div *ngIf="wFiatMoney">
+            <div class="main-label">{{wAmountReceiving}} {{coin | uppercase}}</div>
+            <div class="secondary-label">1 {{coin | uppercase}} = <span *ngIf="fiatCurrency?.toUpperCase() === 'USD'">$</span>{{wFiatMoney | number:'1.2-2'}} <span *ngIf="fiatCurrency?.toUpperCase() !== 'USD'">{{fiatCurrency}}</span> *</div>
+          </div>
           <div class="provider">
             <span class="secondary-label">Provided by</span>
             <img src="assets/img/wyre/wyre.svg">
