Dark mode. Icons. Wallet selector. Buy Crypto from price oage

--- a/src/pages/buy-crypto/crypto-coin-selector/crypto-coin-selector.html
+++ b/src/pages/buy-crypto/crypto-coin-selector/crypto-coin-selector.html
@@ -15,6 +15,7 @@
             </div>
           </ion-note>
         </button>
+        <div class="line-divider"></div>
       </div>
     </ion-list>
   </div>
