--- a/src/pages/home/price-page/price-page.html
+++ b/src/pages/home/price-page/price-page.html
@@ -31,7 +31,7 @@
         </ion-chip>
       </div>
     </span>
-    <button ion-button class="button-standard" (click)="selectWallet()">
+    <button ion-button class="button-standard" (click)="goToCoinSelector()">
       Buy {{ card.name }}
     </button>
   </ion-toolbar>
