--- a/src/pages/buy-crypto/crypto-settings/crypto-settings.html
+++ b/src/pages/buy-crypto/crypto-settings/crypto-settings.html
@@ -28,7 +28,7 @@
 
     <ion-list class="bp-list" *ngIf="wyrePaymentRequests && wyrePaymentRequests.length > 0">
       <ion-item-divider>
-        <img width="90" src="assets/img/wyre/wyre.svg" alt="Wyre Orders">
+        <img width="90" src="assets/img/wyre/logo-wyre.svg" alt="Wyre Orders">
         <ion-spinner item-end name="crescent" *ngIf="loading"></ion-spinner>
       </ion-item-divider>
       <button ion-item *ngFor="let paymentRequest of wyrePaymentRequests | orderBy : ['-created_on']" (click)="openWyreModal(paymentRequest)">
