--- a/src/pages/buy-crypto/crypto-order-summary/crypto-order-summary.html
+++ b/src/pages/buy-crypto/crypto-order-summary/crypto-order-summary.html
@@ -1,4 +1,9 @@
-<wide-header-page title="{{'Order Summary' | translate}}">
+<wide-header-page title="{{'Order Summary' | translate}}" hideBackButton="true">
+  <ion-buttons right>
+    <button clear wide-header-bar-button (click)="cancelOrder()" ion-button>
+      <span translate>Cancel</span>
+    </button>
+  </ion-buttons>
   <div page-content>
     <ion-list class="bp-list">
       <div class="item-label" translate>Amount</div>
